episode-3-part-1(JSX)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="root">
-        <h1>Hii its Abhijit</h1>
+        <h1>Not Render</h1>
     </div>
 
     <script type="module" src="./App.js"></script>
